cmake_minimum_required(VERSION 2.8.3)
project(cirkit_unit03_amcl)
find_package(catkin REQUIRED COMPONENTS
  #  roslaunch # this is for launch test
  )

# These are for launch test
#roslaunch_add_file_check(test/amcl_diff_launch.test.xml)
#roslaunch_add_file_check(test/amcl_diff_gazebo_launch.test.xml)
