<?xml version="1.0"?>
<package format="2">
  <name>cirkit_unit03_gmapping</name>
  <version>0.1.0</version>
  <description>The gmapping packege for gmapping</description>

  <maintainer email="p595201m@mail.kyutech.jp">Masaru Morita</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/CIR-KIT-Unit03/cirkit_unit03_navigation.git</url>
  <url type="bugtracker">https://github.com/CIR-KIT-Unit03/cirkit_unit03_navigation/issues</url>
  <author email="cirkit.infomation@gmail.com">CIR-KIT</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>cirkit_unit03_control</exec_depend>
  <exec_depend>cirkit_unit03_bringup</exec_depend>
  <exec_depend>cirkit_unit03_driver</exec_depend>
  <exec_depend>cirkit_unit03_description</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
  </export>
</package>
